--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -4,7 +4,7 @@
     height: 60px;
     line-height: 60px;
     padding: 0 20px;
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     width: 100%;
     z-index: 1000;
