--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -3,10 +3,8 @@
     border-bottom: 1px solid #eee;
     height: 60px;
     line-height: 60px;
-    padding: 0 20px;
-    /* position: fixed; */
     top: 0;
-    width: 100%;
+    width: 100vw;
     z-index: 1000;
     display: flex;
     justify-content: space-around;
