--- a/src/components/sidebar/style.css
+++ b/src/components/sidebar/style.css
@@ -1,14 +1,43 @@
 .sidebar {
+    position: relative;
     margin-top: 61px;
-    background-color: #fff;
-    border-right: 1px solid #eee;
+    background-color: #eee;
+    border-right: 1px solid #aaa;
     height: 100%;
-    padding: 20px;
+    padding-left: 20px;
     position: fixed;
     left: 0;
     top: 0;
-    width: 200px;
+    width: 180px;
     z-index: 1000;
+    transform: translateX(-190px);
+    transition: transform 0.3s ease-in-out;
+    @media screen and (min-width: 768px) {
+        transform: translateX(0);
+    }
+}
+
+.sidebar-open {
+    transform: translateX(0);
+}
+
+.sidebar .sidebar-toggle {
+    position: absolute;
+    top: 20px;
+    right: -15px;
+    width: 20px;
+    background: none;
+    border: none;
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
+    transition: all 0.5s ease-in-out;
+}
+
+.sidebar-open .sidebar-toggle {
+    top: 20px;
+    right: 0px;
+    transition: all 0.5s ease-in-out;
 }
 
 .sidebar ul {
