--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,18 +1,19 @@
-.header {
-    background-color: #fff;
-    border-bottom: 1px solid #eee;
+.navbar {
+    border-radius: 30px;
+    margin: auto;
+    margin-top: 50px;
+    background-color: #144D3A;
     height: 60px;
     line-height: 60px;
     top: 0;
-    width: 100vw;
+    width: 60vw;
     z-index: 1000;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.header a {
-    background-color: #144D3A;
+.navbar a:not(.logo) {
     color: #C5FACC;
     font-size: 16px;
     text-decoration: none;
@@ -25,13 +26,12 @@
     align-items: center;
 }
 
-.header a:hover {
+.navbar a:hover:not(.logo) {
     background-color: #C5FACC;
     color: #144D3A;
 }
 
-/* if .active add "." like list before text */
-.header a.active::before {
+.navbar a:not(.logo).active::before {
     content: ".";
     font-size: 20px;
     font-weight: bold;
