--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,7 +1,36 @@
+.header-top {
+    height: 40px;
+    width: 100vw;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+}
+
+.header-top svg {
+    margin-right: 20px;
+    margin-top: 5px;
+    height: 20px;
+    width: auto;
+}
+
+.header-top svg:last-child {
+    margin-right: 10vw;
+}
+
+.header-top svg path {
+    fill: #C5FACC;
+}
+
+.header-bottom {
+    background-color: #F9F2DE;
+    width: 100vw;
+    border-radius: 30px 30px 0 0;
+    padding-top: 50px;
+}
 .navbar {
     border-radius: 30px;
     margin: auto;
-    margin-top: 50px;
     background-color: #144D3A;
     height: 60px;
     line-height: 60px;
