--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,6 +1,5 @@
 .header-top {
-    height: 40px;
-    width: 100vw;
+    height: 40px;   
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -24,7 +23,6 @@
 
 .header-bottom {
     background-color: #F9F2DE;
-    width: 100vw;
     border-radius: 30px 30px 0 0;
     padding-top: 50px;
 }
@@ -56,8 +54,7 @@
 }
 
 .navbar a:hover:not(.logo) {
-    background-color: #C5FACC;
-    color: #144D3A;
+    color: #FFB537;
 }
 
 .navbar a:not(.logo).active::before {
