--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root {
+  --color_primary: #144D3A; 
+  --color_secondary: #C5FACC;
+  --color_tertiary: #FFB537;
+  --color_quatinary: #F9F2DE;
+}
