--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -26,6 +26,7 @@
     border-radius: 30px 30px 0 0;
     padding-top: 50px;
 }
+
 .navbar {
     border-radius: 30px;
     margin: auto;
@@ -36,9 +37,14 @@
     width: 60vw;
     z-index: 1000;
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+    }
 }
+
 
 .navbar a:not(.logo) {
     color: #C5FACC;
@@ -51,6 +57,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.navbar:not(.open) a:not(.logo) {
+    display: none;
+    @media screen and (min-width: 768px) {
+        display: flex;
+    }
+}
+
+.open {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #144D3A;
+    z-index: 1000;
+    transition: all 0.5s ease-in-out;
 }
 
 .navbar a:hover:not(.logo) {
