--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -45,7 +45,6 @@
     }
 }
 
-
 .navbar a:not(.logo) {
     color: #C5FACC;
     font-size: 16px;
@@ -66,11 +65,28 @@
     }
 }
 
+.nav-button {
+    border: none;
+    background-color: transparent;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
+}
+
+.nav-button svg path {
+    fill: black;
+}
+
 .open {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    height: 100vh;
+    width: 100vw;
     background-color: #144D3A;
     z-index: 1000;
     transition: all 0.5s ease-in-out;
