--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -85,8 +85,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    height: fit-content;
     background-color: #144D3A;
     z-index: 1000;
     transition: all 0.5s ease-in-out;
@@ -94,12 +93,4 @@
 
 .navbar a:hover:not(.logo) {
     color: #FFB537;
-}
-
-.navbar a:not(.logo).active::before {
-    content: ".";
-    font-size: 20px;
-    font-weight: bold;
-    margin-right: 10px;
-    padding-bottom: 10px;
 }
