--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -25,16 +25,22 @@
     background-color: #F9F2DE;
     border-radius: 30px 30px 0 0;
     padding-top: 50px;
+    color: #C5FACC;
+    font-family: Bricolage Grotesque;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 150%;
 }
 
 .web-nav {
     border-radius: 30px;
     margin: auto;
     background-color: #144D3A;
-    height: 60px;
+    height: 40px;
     line-height: 60px;
     top: 0;
-    width: 60vw;
+    width: 50vw;
     z-index: 1000;
     display: flex;
     flex-direction: column;
@@ -47,10 +53,9 @@
 
 .web-nav a:not(.logo) {
     color: #C5FACC;
-    font-size: 16px;
     text-decoration: none;
     border-radius: 23px;
-    width: 140px;
+    width: 100px;
     height: 35px;
     flex-shrink: 0;
     display: flex;
@@ -89,6 +94,14 @@
     }
 }
 
+.logo {
+    text-align: center;
+    height: 70px;
+}
+.logo svg{
+    height: 70px;
+}
+
 /* Styles spécifiques pour le menu mobile */
 
 @media screen and (max-width: 1048px) {
@@ -97,11 +110,11 @@
         border-radius: 30px 30px 0 0;
         margin: auto;
         background-color: #144D3A;
-        height: 60px;
+        height: 40px;
         line-height: 60px;
         left: 0;
         top: 0;
-        width: 60vw;
+        width: 50vw;
         z-index: 1000;
         display: flex;
         align-items: center;
@@ -111,7 +124,7 @@
 
     }
 
-    .logo {
+    .mobile-nav .logo {
         position: absolute;
         flex: 1;
         text-align: center;
@@ -125,7 +138,7 @@
         display: flex; 
         flex-direction: column;
         align-items: center;
-        width: 60vw;
+        width: 50vw;
         margin: auto;
         list-style: none;
         border-radius: 0 0 30px 30px;
@@ -141,7 +154,6 @@
     a {
         color: #C5FACC;
         text-decoration: none;
-        font-size: 16px;
         margin: 10px 0;
     }
 
