--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ code {
 .page-container {
   background-color: #F9F2DE;
   height: 100vh;
+  padding-top: 50px;
 }
 
 :root {
@@ -27,5 +28,7 @@ code {
   --color_quatinary: #F9F2DE;
 }
 
-* {   padding: 0;
-  margin: 0;}
+* {   
+  padding: 0;
+  margin: 0;
+}
