--- a/src/pages/documentation/style.css
+++ b/src/pages/documentation/style.css
@@ -1,6 +1,7 @@
 .content {
     margin-left: 30vw;
     padding: 0 50px;
+    padding-bottom: 50px;
 }
 
 .content .title {
@@ -12,18 +13,20 @@
     line-height: 150%; /* 54px */
 }
 
-.content .description {
-    color: #000;
+.content .description, .content .conclusion {
+    color: #1E1E1E;
     font-family: Poppins;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 150%; /* 24px */
+    line-height: 150%;
+    letter-spacing: -0.368px;
 }
 
 .content .description p {
     margin-bottom: 20px;
 }
+
 .parent-element {
     color: var(--bg1, #144D3A);
     font-family: Poppins;
