--- a/src/components/sidebar/style.css
+++ b/src/components/sidebar/style.css
@@ -38,7 +38,7 @@
 
 .sidebar-subtitle {
     color: var(--bg1, #144D3A);
-    font-family: Poppins;
+    font-family: sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
