--- a/src/components/subsection/style.css
+++ b/src/components/subsection/style.css
@@ -3,8 +3,8 @@
     padding: 30px;
     flex-shrink: 0;
     color: #144D3A;
-    font-family: Poppins;
-    font-size: 20px;
+    font-family: sans-serif;
+    font-size: 10px;
     font-style: normal;
     font-weight: 600;
     line-height: 150%;
@@ -18,10 +18,14 @@
     margin-bottom: 30px;
 }
 
+.subsection h2 {
+    font-size:  16px;
+}
+
 .subsection-current {
     color: var(--bg3, #C5FACC);
-    font-family: Poppins;
-    font-size: 16px;
+    font-family: sans-serif;
+    font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%; 
