--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,24 @@
 @import url('https://fonts.cdnfonts.com/css/bricolage-grotesque');
 
+
+
                 
 body {
   overflow-x: hidden;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Bricolage Grotesque'
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Bricolage Grotesque', 'Poppins'
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #144D3A;
+  font-family: 'Bricolage Grotesque', sans-serif;
+  font-family: 'Bricolage Grotesque 10pt', sans-serif;
+  font-family: 'Bricolage Grotesque 10pt Condensed', sans-serif;
+  font-family: 'Bricolage Grotesque 48pt', sans-serif;
+  font-family: 'Bricolage Grotesque 48pt Condensed', sans-serif;
+
 }
 
 code {
