--- a/src/pages/documentation/style.css
+++ b/src/pages/documentation/style.css
@@ -1,6 +1,6 @@
 .content {
     margin-left: 30vw;
-    padding: 0 50px;
+    padding: 0 10%;
     padding-bottom: 50px;
 }
 
@@ -15,7 +15,7 @@
 
 .content .description, .content .conclusion {
     color: #1E1E1E;
-    font-family: Poppins;
+    font-family: sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -29,7 +29,7 @@
 
 .parent-element {
     color: var(--bg1, #144D3A);
-    font-family: Poppins;
+    font-family: sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 300;
